# CANaerospace

pavel_kirienko-canaerospace/: .hg_archival.txt  .hgignore  LICENSE  README.md
pavel_kirienko-canaerospace/canaerospace/: CMakeLists.txt  embedded_rules.mk
pavel_kirienko-canaerospace/canaerospace/include/canaerospace/: canaerospace.h  driver.h  generic_redundancy_resolver.h  message.h
pavel_kirienko-canaerospace/canaerospace/include/canaerospace/param_id/: nod_default.h  uav.h
pavel_kirienko-canaerospace/canaerospace/include/canaerospace/services/: std_data_upload_download.h  std_flashprog.h  std_identification.h  std_nodesync.h
pavel_kirienko-canaerospace/canaerospace/src/: core.c  debug.h  generic_redundancy_resolver.c  list.c  list.h  marshal.c  marshal.h  service.c  service.h  util.c
pavel_kirienko-canaerospace/canaerospace/src/services/: std_data_upload_download.c  std_flashprog.c  std_identification.c  std_nodesync.c
pavel_kirienko-canaerospace/canaerospace/test/: core_test.cpp  grr_test.cpp  marshal_test.cpp  test.cpp  test.hpp  util_test.cpp
pavel_kirienko-canaerospace/canaerospace/test/services/: std_data_upload_download.cpp  std_flashprog.cpp  std_identification.cpp  std_nodesync.cpp
pavel_kirienko-canaerospace/drivers/socketcan/: Makefile  slcan_init  socketcan.c  socketcan.h
pavel_kirienko-canaerospace/drivers/stm32/: can_driver.c  can_driver.h  can_filter.c  can_selftest.c  can_timer.c  internal.h  rules.mk
pavel_kirienko-canaerospace/examples/linux/: CMakeLists.txt  canaerospace_linux.c  canaerospace_linux.h  main.c
pavel_kirienko-canaerospace_embedded_examples/: .hg_archival.txt  .hgignore  LICENSE  README.md
pavel_kirienko-canaerospace_embedded_examples/stm32_chibios/: Makefile  README.md  flash.sh  gdb_init.gdb
pavel_kirienko-canaerospace_embedded_examples/stm32_chibios/chibios/os/various/: chprintf.c  chprintf.h  shell.c  shell.h  syscalls.c
pavel_kirienko-canaerospace_embedded_examples/stm32_chibios/spl/src/: stm32f10x_can.c
pavel_kirienko-canaerospace_embedded_examples/stm32_chibios/src/: main.c
pavel_kirienko-canaerospace_embedded_examples/stm32_chibios/src/sys/: board.c  board.h  chconf.h  halconf.h  mcuconf.h  sys.c  sys.h
pavel_kirienko-canaerospace_embedded_examples/stm32_freertos/: Makefile  README.md  gdb_init.gdb  stm32.ld
pavel_kirienko-canaerospace_embedded_examples/stm32_freertos/FreeRTOS/: FreeRTOSConfig.h  rules.mk
pavel_kirienko-canaerospace_embedded_examples/stm32_freertos/cmsis/: cm3_exceptions.c  core_cm3.c  startup_stm32f10x_cl.s  stm32f10x_conf.h
pavel_kirienko-canaerospace_embedded_examples/stm32_freertos/src/: main.c  newlib_stubs.c  sensors.c  sensors.h  sys.c  sys.h  util.c  util.h
pavel_kirienko-canaerospace_embedded_examples/stm32_freertos/src/srvport/: srvport.c  srvport.h
(+12 files in other folders)
